fix overflow on header

--- a/workspaces/starknet-summit/src/index.css
+++ b/workspaces/starknet-summit/src/index.css
@@ -228,6 +228,7 @@ body {
 
 .header {
   max-width: calc(100% - 32px);
+  box-sizing: border-box;
 }
 
 
